Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-11170

sanity test 415 fails with 'rename took N > M sec'

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.16.0
    • Lustre 2.12.0, Lustre 2.13.0, Lustre 2.12.3, Lustre 2.14.0, Lustre 2.12.6, Lustre 2.15.0
    • 3
    • 9223372036854775807

      This issue was created by maloo for James Nunez <james.a.nunez@intel.com>

      This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/98efeea0-7f0b-11e8-8fe6-52540065bddc

      sanity test 415 fails for DNE with ZFS with the error

      total: 500 open/close in 0.87 seconds: 572.35 ops/second
      rename 500 files took 283 sec
       sanity test_415: @@@@@@ FAIL: rename took 283 sec 
      

      So far, this test only fails for ZFS.

      This test started failing on 2018-07-03 with logs at https://testing.whamcloud.com/test_sets/98efeea0-7f0b-11e8-8fe6-52540065bddc

      Other test failures at
      https://testing.whamcloud.com/test_sets/8de6a208-8945-11e8-9028-52540065bddc
      https://testing.whamcloud.com/test_sets/9bb5e252-8e9c-11e8-b0aa-52540065bddc
      https://testing.whamcloud.com/test_sets/029c73ea-8e9e-11e8-87f3-52540065bddc

      VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
      sanity test_415 - rename took 283 sec
      sanity test_415 - rename took 154 > 125 sec

            vkuznetsov Vitaliy Kuznetsov
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            18 Start watching this issue

              Created:
              Updated:
              Resolved: