LU-11170 osd-zfs: test ZFS version update to 0.8.2

Test 415, rename under DNE2, is much slower under zfs-0.8 than it was
under 0.7.  It may be that Lustre is waiting for txgs to sync in
a way, or at times, that perform poorly under zfs 0.8.

Simply not performing the wait in osd_sync() causes Lustre not to work
at all; this is apparently why it's the exception to the
txg_wait_synced() tunable that just waits some number of ms.

dmu_tx_assign() waits for syncs indirectly, in that a tx may not be
assigned to the next txg if TXG_NOTHROTTLE is noet set.

Add this flag to see if this changes the behavior of test 415,
without breaking lustre entirely.

Test-Parameters: trivial fstype=zfs ostcount=2 mdscount=2 mdtcount=2 testlist=sanity,sanity,sanity,sanity,sanity,sanity
Signed-off-by: Olaf Faaland <faaland1@llnl.gov>
Change-Id: Ia339ed21ef45af8c9c041ea0ee69c1508ff42b2d